# janscalckernel

./: README.md  pyproject.toml
example/: example.ipynb
src/janscalckernel/: install_kernelspec.py  kernel.py
