[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "janscalckernel"
version = "0.1"
authors = [
  { name="Jan Arman Parpin", email="is@hidden.com" },
]
description = "A jupyter calc kernel."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
    "ipykernel",
    "pexpect"
]

[project.urls]
"Homepage" = "https://github.com/jans-code/janscalckernel"
"Bug Tracker" = "https://github.com/jans-code/janscalckernel/issues"

[project.scripts]
janscalckernel = "janscalckernel.install_kernelspec:install_kernelspec"